--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-app",
+  "name": "nextjs-stream-chat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.2",
+    "@clerk/nextjs": "^4.31.6",
     "@clerk/themes": "^1.7.5",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@types/node": "20.5.1",
@@ -35,15 +35,5 @@
     "typescript": "5.1.6",
     "web-push": "^3.6.4",
     "zod": "^3.22.2"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1"
   }
 }
