--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-push-notification": "^1.5.4",
     "stream-chat": "^8.11.0",
     "stream-chat-react": "^10.9.0",
     "svix": "^1.8.1",
